# FlatlandRT

./: .bazelrc  .editorconfig  BUILD.bazel  CITATION.cff  LICENSE.md  README.md  WORKSPACE.bazel  azure-pipelines.yml  coverity.yaml  renovate.json5
devertexwahn/: .bazelrc  .bazelrc.remote_cache  .bazelversion  .clang-format  .gitignore  MODULE.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod  coverage.sh
devertexwahn/bazel/bazelrc/: .bazelrc.remote_cache
devertexwahn/ci/: README.md  macOS-10.15-clang12.yaml  macOS-11-apple-clang13.yaml  macOS-12-apple-clang14.yaml  macOS-12-clang13.yaml  macOS-12-clang14.yaml  macOS-13-apple-clang14.yaml  macOS-13-apple-clang15.yaml  macOS-14-apple-clang14.yaml  macOS-14-apple-clang15.yaml  macOS-14-clang14.yaml  macOS-15-apple-clang16.yaml  ubuntu-20.04-clang14.yaml  ubuntu-20.04-gcc9-dbg-part1.yaml  ubuntu-20.04-gcc9-dbg-part2.yaml  ubuntu-20.04-gcc9-dbg.yaml  ubuntu-20.04-gcc9-fast-opt.yaml  ubuntu-20.04-gcc9-fast.yaml  ubuntu-20.04-gcc9-opt.yaml  ubuntu-20.04-gcc9.yaml  ubuntu-22.04-bazel-query.yaml  ubuntu-22.04-clang14.yaml  ubuntu-22.04-clang16.yaml  ubuntu-22.04-clang19.yaml  ubuntu-22.04-coverage.yaml  ubuntu-22.04-cppcheck.yaml  ubuntu-22.04-gcc11-bzlmod.yaml  ubuntu-22.04-gcc11-dbg-part1.yaml  ubuntu-22.04-gcc11-dbg-part2.yaml  ubuntu-22.04-gcc11-dbg.yaml  ubuntu-22.04-gcc11-fast-opt.yaml  ubuntu-22.04-gcc11.yaml  ubuntu-24.04-bazel-query.yaml  ubuntu-24.04-clang19.yaml  ubuntu-24.04-coverage.yaml  ubuntu-24.04-gcc13-dbg-part1.yaml  ubuntu-24.04-gcc13-dbg-part2.yaml  ubuntu-24.04-gcc13-fast-opt.yaml  ubuntu-24.04-gcc13-flaky-test-detection.yaml  windows-2019-vs2019-dbg.yaml  (+8 more)
devertexwahn/core/: BUILD.bazel  CMakeLists.txt  demangle.cpp  demangle.hpp  exception.cpp  exception.h  exception.hpp  exception_test.cpp  intrin.hpp  logging.cpp  logging.h  logging.hpp  logging_test.cpp  logging_test_env.cpp  namespace.h  namespace.hpp  non_copyable.h  non_copyable.hpp  object.cpp  object.h  object.hpp  object_factory.cpp  object_factory.h  object_factory.hpp  object_factory_test.cpp  object_test.cpp  platform.cpp  platform.h  platform.hpp  platform_test.cpp  platform_test_library.cpp  property_set.cpp  property_set.h  property_set.hpp  property_set_test.cpp  reference_counted.h  reference_counted.hpp  reference_counted_test.cpp  spin_mutex.hpp  timer.cpp  (+3 more)
devertexwahn/core/io/: BUILD.bazel  file_stream.cpp  file_stream.hpp  file_stream_test.cpp  stream.cpp  stream.hpp
devertexwahn/core/stl/: BUILD.bazel  filesystem.hpp  format.hpp  map.hpp  memory.hpp  span.hpp  string.h  string.hpp  string_view.hpp  vector.hpp
devertexwahn/core/tests/: BUILD.bazel  test_logger.cpp  test_logger.h  test_logger.hpp
devertexwahn/flatland/LICENSES/: LICENSE.spdx
devertexwahn/flatland/cli/: BUILD.bazel  main.cpp
devertexwahn/flatland/core/: BUILD.bazel  CMakeLists.txt  exception.cpp  exception.h  exception_test.cpp  logging.h  namespace.h  non_copyable.h  object.cpp  object.h  object_factory.cpp  object_factory.h  object_factory_test.cpp  property_set.cpp  property_set.h  property_set_test.cpp  reference_counted.h  reference_counted_test.cpp  timer.cpp  timer.h  timer_test.cpp
devertexwahn/flatland/docs/: architecture.md  example_scenes.md  user_manual.md
devertexwahn/flatland/imaging/: BUILD.bazel  color.cpp  color.h  color_test.cpp  image.cpp  image.h  image_test.cpp
devertexwahn/flatland/math/: BUILD.bazel  axis_aligned_bounding_box.cpp  axis_aligned_bounding_box.h  axis_aligned_bounding_box_test.cpp  frame.h  frame_test.cpp  geometry.h  geometry.inc  geometry_test.cpp  intersection.h  intersection_test.cpp  matrix.h  matrix_test.cpp  normal.h  normal_test.cpp  point.h  point_test.cpp  ray.h  ray_test.cpp  refract.cpp  refract.h  refract_test.cpp  transform.h  transform_test.cpp  util.h  util_test.cpp  vector.h  vector_test.cpp  warping.h  warping_test.cpp
devertexwahn/flatland/rendering/: BUILD.bazel  fresnel.h  fresnel.hpp  fresnel_test.cpp  material.cpp  material.h  material_test.cpp  property_set.h  property_set_formatter.h  property_set_formatter.hpp  property_set_formatter_test.cpp  property_set_test.cpp  rendering.cpp  rendering.h  rendering.hpp  sampler.cpp  sampler.h  sampler.hpp  sampler_test.cpp
devertexwahn/flatland/scenes/: BUILD.bazel  ao.flatland.xml  disk.ao.flatland.xml  disk.flatland.xml  disk_2.flatland.xml  disk_grid.flatland.xml  gradient_refractive_index.flatland.xml  mirror.flatland.xml  mirrors.flatland.xml  rectangle.flatland.xml  rectangles.flatland.xml
devertexwahn/imaging/: BUILD.bazel  color.cpp  color.h  color.hpp  color_converter.h  color_converter.hpp  color_converter_test.cpp  color_test.cpp  image.cpp  image.h  image.hpp  image_test.cpp
devertexwahn/imaging/io/: BUILD.bazel  io.cpp  io.h  io.hpp  io_gif.cpp  io_gif.hpp  io_gif_test.cpp  io_jpeg.cpp  io_jpeg.h  io_jpeg.hpp  io_jpeg_test.cpp  io_openexr.cpp  io_openexr.h  io_openexr.hpp  (+21 more)
devertexwahn/math/: BUILD.bazel  axis_aligned_bounding_box.h  axis_aligned_bounding_box.hpp  axis_aligned_bounding_box_test.cpp  constants.hpp  frame.h  frame.hpp  frame_test.cpp  geometry.h  geometry.hpp  geometry.inc  geometry_test.cpp  intersection.h  intersection.hpp  intersection_test.cpp  matrix.h  matrix.hpp  matrix_test.cpp  normal.h  normal.hpp  normal_test.cpp  point.h  point.hpp  point_test.cpp  quaternion.h  quaternion.hpp  quaternion_test.cpp  ray.h  ray.hpp  ray_test.cpp  refract.cpp  refract.h  refract.hpp  refract_test.cpp  sampling.h  sampling.hpp  sampling_test.cpp  tensor.h  tensor.hpp  tensor_test.cpp  (+11 more)
scenes/: BUILD.bazel  ao.flatland.xml  bunny.ao.flatland.xml  bunny.flatland.xml  bunny_coords.ply  disk.ao.flatland.xml  disk.flatland.xml  gradient_refractive_index.flatland.xml  mirror.flatland.xml  mirrors.flatland.xml  rectangle.flatland.xml  rectangles.flatland.xml
srcs/: BUILD.bazel
srcs/flatland.cli/: BUILD.bazel  main.cpp
tests/acceptance_tests/: BUILD.bazel  test_render_scenes.sh
tests/scenes/: BUILD.bazel  bunny.flatland.yaml  disks.flatland.xml  integrator_missing.flatland.xml  property.test.flatland.xml  scene_tag_missing.flatland.xml
(+339 files in other folders)
