"""
    SPDX-FileCopyrightText: Copyright 2024-2025 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

"""FlatlandRT build and test dependencies."""

module(
    name = "flatland",
    version = "0.0.1",
)

# Depend on apple_support first and then rules_cc so that the Xcode toolchain
# from apple_support wins over the generic Unix toolchain from rules_cc.
bazel_dep(name = "apple_support", version = "2.0.0")

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "boost.algorithm", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.asio", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.core", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.endian", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.predef", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.program_options", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.uuid", version = "1.89.0.bcr.2")
bazel_dep(name = "cpuinfo", version = "0.0.0-20250925-877328f")
bazel_dep(name = "eigen", version = "5.0.1")
bazel_dep(name = "fmt", version = "12.1.0")
bazel_dep(name = "hypothesis")
bazel_dep(name = "imath", version = "3.2.2.bcr.1")
bazel_dep(name = "libdeflate", version = "1.25")
bazel_dep(name = "libjpeg_turbo", version = "3.1.3")
bazel_dep(name = "libpng", version = "1.6.53")
bazel_dep(name = "libwebp", version = "1.6.0")
bazel_dep(name = "nasm", version = "2.16.03.bcr.2")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "openexr", version = "3.4.4")
bazel_dep(name = "pcg", version = "0.98.1.bcr.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "pugixml", version = "1.15")
bazel_dep(name = "rules_cc", version = "0.2.15")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "spdlog", version = "1.16.0.bcr.2")
bazel_dep(name = "xtensor", version = "0.27.1")
bazel_dep(name = "xtl", version = "0.8.0")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.8")

#bazel_dep(name = "aspect_rules_lint", version = "1.4.4", dev_dependency = True)
bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)
bazel_dep(name = "catch2", version = "3.11.0", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.9.4", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# This projects intends to stay as close as possible to upstream dependencies (Live at Head). Therefore, upstream
# dependencies are copied on a regular basis 1:1 with some Bazel related patches (if needed) to the `third_party` folder
# and overridden here. If you do not like this approach you can simply remove most of the local_path_override's here and
# live with the newest versions in the BCR (which can be much older).
# Note: Some dependencies might be not part of the BCR and therefore the local_path_override is needed
# here for those libraries.

local_path_override(
    module_name = "libjpeg_turbo",
    path = "../third_party/libjpeg-turbo-3.1.3",
)

local_path_override(
    module_name = "abseil-cpp",
    path = "../third_party/abseil-cpp",
)

#local_path_override(
#    module_name = "ape",
#    path = "../third_party/ape-v1.0.1",
#)

local_path_override(
    module_name = "bazel_skylib",
    path = "../third_party/bazel-skylib",
)

local_path_override(
    module_name = "bazel_clang_tidy",
    path = "../third_party/bazel_clang_tidy",
)

local_path_override(
    module_name = "catch2",
    path = "../third_party/Catch2",
)

local_path_override(
    module_name = "cpuinfo",
    path = "../third_party/cpuinfo",
)

local_path_override(
    module_name = "eigen",
    path = "../third_party/eigen-5.0.0",
)

local_path_override(
    module_name = "fmt",
    path = "../third_party/fmt",
)

#local_path_override(
#    module_name = "imath",
#    path = "../third_party/Imath",
#)

local_path_override(
    module_name = "libdeflate",
    path = "../third_party/libdeflate-1.24",
)

local_path_override(
    module_name = "libpng",
    path = "../third_party/libpng-1.6.50",
)

local_path_override(
    module_name = "libwebp",
    path = "../third_party/libwebp-1.6.0",
)

local_path_override(
    module_name = "hypothesis",
    path = "../third_party/hypothesis",
)

local_path_override(
    module_name = "openexr",
    path = "../third_party/openexr-3.4.4",
)

local_path_override(
    module_name = "pcg",
    path = "../third_party/pcg-cpp",
)

local_path_override(
    module_name = "pugixml",
    path = "../third_party/pugixml",
)

#local_path_override(
#    module_name = "xtensor",
#    path = "../third_party/xtensor",
#)

local_path_override(
    module_name = "xtensor",
    path = "../third_party/xtensor-0.27.0",
)

#local_path_override(
#    module_name = "xtl",
#    path = "../third_party/xtl",
#)

local_path_override(
    module_name = "rules_pkg",
    path = "../third_party/rules_pkg-1.1.0",
)

#local_path_override(
#    module_name = "spdlog",
#    path = "../third_party/spdlog",
#)

local_path_override(
    module_name = "yaml-cpp",
    path = "../third_party/yaml-cpp",
)

#-------------------------------------------------------------------------------------
# LLVM toolchain for Bazel
#-------------------------------------------------------------------------------------

bazel_dep(name = "toolchains_llvm", version = "1.2.0")
git_override(
    module_name = "toolchains_llvm",
    commit = "b3c96d2dbc698eab752366bbe747e2a7df7fa504",
    remote = "https://github.com/bazel-contrib/toolchains_llvm.git",
)

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

LLVM_VERSIONS = {
    "": "19.1.3",  # Default version 19.1.3
    "darwin-aarch64": "19.1.3",
    "darwin-x86_64": "19.1.3",
}

llvm.toolchain(
    name = "llvm_toolchain",
    llvm_versions = LLVM_VERSIONS,
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

#register_toolchains("@llvm_toolchain//:all")

#-------------------------------------------------------------------------------------
# Python
#-------------------------------------------------------------------------------------

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

#python.toolchain(
#    python_version = "3.11",
#)
use_repo(python, "python_versions")
