"""
    This file is part of Flatland, a simple 2D ray tracer

    Copyright (c) 2020, Julian Amann (dev@vertexwahn.de), All rights reserved.
    Distributed under the 3-Clause BSD License software license, see the accompanying
    file LICENSE.md or https://opensource.org/licenses/BSD-3-Clause.
"""

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "scenes",
    srcs = [
        "ao.flatland.xml",
        "bunny.flatland.xml",
        "bunny_coords.ply",
        "disk.flatland.xml",
        "gradient_refractive_index.flatland.xml",
        "mirror.flatland.xml",
        "mirrors.flatland.xml",
        "rectangle.flatland.xml",
        "rectangles.flatland.xml",
    ],
)

filegroup(
    name = "reference_images",
    srcs = [
        "bunny_ref.svg",
        "mirror_ref.svg",
        "mirrors_ref.svg",
        "rectangles_ref.svg"
    ],
)
