"""
    This file is part of Flatland, a simple 2D ray tracer

    Copyright (c) 2020, Julian Amann (dev@vertexwahn.de), All rights reserved.
    Distributed under the 3-Clause BSD License software license, see the accompanying
    file LICENSE.md or https://opensource.org/licenses/BSD-3-Clause.
"""

cc_library(
    name = "flatland",
    srcs = [
        "flatland/camera/camera.h",
        "flatland/camera/film.cpp",
        "flatland/camera/film.h",
        "flatland/canvas/label.h",
        "flatland/canvas/svg_canvas.h",
        "flatland/core/color.h",
        "flatland/core/logging.h",
        "flatland/core/material.cpp",
        "flatland/core/material.h",
        "flatland/core/namespace.h",
        "flatland/core/non_copyable.h",
        "flatland/core/object.cpp",
        "flatland/core/object.h",
        "flatland/core/object_factory.cpp",
        "flatland/core/object_factory.h",
        "flatland/core/property_set.cpp",
        "flatland/core/property_set.h",
        "flatland/core/reference_counted.h",
        "flatland/core/sampler.h",
        "flatland/integrator/ambient_occlusion.h",
        "flatland/integrator/integrator.h",
        "flatland/integrator/path_mirror_reflection.h",
        "flatland/integrator/path_specular_transmission.cpp",
        "flatland/integrator/path_specular_transmission.h",
        "flatland/math/geometry.h",
        "flatland/math/geometry.inc",
        "flatland/math/intersection.h",
        "flatland/math/matrix.h",
        "flatland/math/normal.h",
        "flatland/math/point.h",
        "flatland/math/ray.h",
        "flatland/math/refraction.cpp",
        "flatland/math/refraction.h",
        "flatland/math/transform.h",
        "flatland/math/util.h",
        "flatland/math/vector.h",
        "flatland/math/warping.h",
        "flatland/scene/load_scene.cpp",
        "flatland/scene/load_scene.h",
        "flatland/scene/scene.h",
        "flatland/scene/shape/disk.h",
        "flatland/scene/shape/polygon.h",
        "flatland/scene/shape/rectangle.h",
        "flatland/scene/shape/shape.cpp",
        "flatland/scene/shape/shape.h",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "@boost//:algorithm",
        "@eigen",
        "@fmt",
        "@glog",
        "@pcg",
        "@pugixml",
    ],
)
